# e-learning-platform-lua-walber

./: .env.backup.20250925_200703  .env.backup.20250925_201256  .env.backup.20250925_202241  .gitignore  README.md  TESTING_GUIDE.md  elearning.db  env.example  project_structure.md  pyproject.toml  requirements.txt  setup.sh
business/ai/: chatbot_service.py  recommendation_engine.py
business/core/: usuario_manager.py
business/learning/: content_delivery.py
data_access/external_services/: content_provider.py
data_access/repositories/: base_repository.py  desempenho_repository.py  trilha_repository.py  usuario_repository.py
e_learning_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
infrastructure/database/: connection.py  models.py
infrastructure/integration/: celery_app.py  file_storage.py  gemini_client.py  message_queue.py  tasks.py
infrastructure/security/: auth.py
lua_bridge/: __init__.py  lua_engine.py
lua_core/: init.lua
lua_core/ai/: assistant.lua
lua_core/business/: course_manager.lua  quiz_manager.lua  trilha_generator.lua  user_manager.lua
lua_core/data/: database.lua
lua_core/utils/: crypto.lua  helpers.lua
presentation/api/: main.py
presentation/api/routers/: chatbot.py  content.py  recommendations.py  trilhas.py  trilhas_personalizadas.py  users.py
presentation/api/schemas/: chatbot_schemas.py  trilha_schemas.py  user_schemas.py
presentation/web/: index.html
presentation/web/static/css/: components.css  main.css
presentation/web/static/js/: api.js  chatbot.js  dashboard.js  main.js  trilhas_personalizadas.js
scripts/: create_sample_data.py
